fix: dark mode latence

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ input[type="submit"]{
     width: 95%;
     margin: 5px;
     background: var(--color-primary);
-    color: var(--color-light);
+    color:var(--color-light);
     cursor: pointer;
 }
 
@@ -221,7 +221,6 @@ footer{
     font-weight: 600;
     font-size: 24px;
     position: relative;
-    width:fit-content ;
     bottom: 50px;
     left: 0;
 }
